<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".windows.DetailsPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_15sdp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:buttonGravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/back"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/ib_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/rounded_corner_shape"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/cart"
                    android:text="@string/button" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerInside"
            android:src="@drawable/kiwi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toTopOf="@id/tv_origin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product_image"
            tools:text="Avocado" />

        <TextView
            android:id="@+id/tv_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/gray_icon"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
            tools:text="Indian Product" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/primary_green"
            android:rating="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_origin" />

        <LinearLayout
            android:id="@+id/ll_quantity_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/quantity_change_card_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_about_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar">

            <ImageView
                android:id="@+id/iv_add_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/minus" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/iv_minus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/add" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingVertical="@dimen/_8sdp"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_about_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_product_image"
            tools:text="$ 11.25" />

        <TextView
            android:id="@+id/tv_about_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/text_black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@id/tv_about_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_quantity_change"
            android:text="@string/about_the_product" />

        <TextView
            android:id="@+id/tv_about_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            android:lineHeight="@dimen/_18sdp"
            android:text="@string/description"
            android:textColor="@color/gray_icon"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_heading" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="@dimen/_20sdp"
        android:orientation="horizontal"
        android:background="@drawable/gradient_bg">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/heart"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="@color/white"
            android:background="@drawable/quantity_change_card_bg"
            />


        <Space
            android:layout_width="@dimen/_20sdp"
            android:layout_height="match_parent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:icon="@drawable/cart"
            android:text="@string/add_to_cart"
            android:padding="@dimen/_5sdp"
            app:iconGravity="textStart"
            app:iconSize="@dimen/_20sdp"
            android:textSize="@dimen/_14ssp"
            app:backgroundTint="@color/primary_green"
            android:background="@drawable/quantity_change_card_bg"/>


    </LinearLayout>

</FrameLayout>
